--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <header>
  	<title>Born's Lurk</title>
- 	<link rel="stylesheet" type="text/css" href="css.css">
+ 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
  	<h1 class="made">Made By <a class="link" href="https://twitter.com/Limedice">Lime</a></h1>
  	<h1 class="born">All Born Twitch Channels</h1>
  	<h1 class="born1">Please Lurk!</h1>
