--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ alert("(ON CHROME) Right click on this tab and click mute site")
 </script>
 
 <iframe class="bornstream" 
-    src="http://player.twitch.tv/?channel=bornesports&muted=false"
+    src="http://player.twitch.tv/?channel=ninja&muted=false"
     height="216"
     width="384"
     frameborder="0"
