--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <iframe class="bornstream" 
-    src="http://player.twitch.tv/?channel=ninja&muted=false"
+    src="https://player.twitch.tv/?channel=ninja&muted=false"
     height="216"
     width="384"
     frameborder="0"
@@ -22,7 +22,7 @@
     allowfullscreen="false">
 </iframe>
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=bonkstv&muted=false"
+    src="https://player.twitch.tv/?channel=bonkstv&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -31,7 +31,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=buddyd&muted=false"
+    src="https://player.twitch.tv/?channel=buddyd&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -40,7 +40,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=ChrisRadial&muted=false"
+    src="https://player.twitch.tv/?channel=ChrisRadial&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -49,7 +49,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=Floyd_FPSd&muted=false"
+    src="https://player.twitch.tv/?channel=Floyd_FPSd&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -58,7 +58,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=hofff&muted=false"
+    src="https://player.twitch.tv/?channel=hofff&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -67,7 +67,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=Limedices&muted=false"
+    src="https://player.twitch.tv/?channel=Limedices&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -76,7 +76,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=Malicityy&muted=false"
+    src="https://player.twitch.tv/?channel=Malicityy&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -85,7 +85,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=bornrandom17&muted=false"
+    src="https://player.twitch.tv/?channel=bornrandom17&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -94,7 +94,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=riddlelive&muted=false"
+    src="https://player.twitch.tv/?channel=riddlelive&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -103,7 +103,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="http://player.twitch.tv/?channel=sweatycarrot&muted=false"
+    src="https://player.twitch.tv/?channel=sweatycarrot&muted=false"
     height="144"
     width="256"
     frameborder="0"
