--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </iframe>
 
 <iframe class="stream" 
-    src="https://player.twitch.tv/?channel=Floyd_FPSd&muted=false"
+    src="https://player.twitch.tv/?channel=Floyd_FPS&muted=false"
     height="144"
     width="256"
     frameborder="0"
