--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 <iframe class="bornstream" 
-    src="https://player.twitch.tv/?channel=ninja&muted=false"
+    src="https://player.twitch.tv/?channel=bornesports&muted=false"
     height="216"
     width="384"
     frameborder="0"
