--- a/index.html
+++ b/index.html
@@ -56,15 +56,6 @@
     scrolling="false"
     allowfullscreen="false">
 </iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=Floyd_FPS&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
 
 <iframe class="stream" 
     src="https://player.twitch.tv/?channel=hofff&muted=false"
@@ -101,6 +92,15 @@
     scrolling="false"
     allowfullscreen="false">
 </iframe>
-
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=riddlelive&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
   </body>
 </html>
