--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </iframe>
    
 <iframe class="stream" 
-    src="https://player.twitch.tv/?channel=riddlelive&muted=false"
+    src="https://player.twitch.tv/?channel=simplyridic&muted=false"
     height="144"
     width="256"
     frameborder="0"
