--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
 </iframe>
 
 <iframe class="stream" 
+    src="https://player.twitch.tv/?channel=mynameissavior&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
     src="https://player.twitch.tv/?channel=riddlelive&muted=false"
     height="144"
     width="256"
@@ -94,7 +103,25 @@
 </iframe>
    
 <iframe class="stream" 
+    src="https://player.twitch.tv/?channel=RealPolarBear&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
     src="https://player.twitch.tv/?channel=simplyridic&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=Frequentzy&muted=false"
     height="144"
     width="256"
     frameborder="0"
