--- a/index.html
+++ b/index.html
@@ -129,5 +129,24 @@
     allowfullscreen="false">
 </iframe>
    
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=stxmpr&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=tbecurve&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
   </body>
 </html>
