--- a/index.html
+++ b/index.html
@@ -148,5 +148,32 @@
     allowfullscreen="false">
 </iframe>
    
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=grayylive&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+  
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=zpoisonedyouth&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=ceyare&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
   </body>
 </html>
