--- a/index.html
+++ b/index.html
@@ -174,6 +174,51 @@
     scrolling="false"
     allowfullscreen="false">
 </iframe>
+ 
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=divineprodigyy&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=itszonicz&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=lceTV&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=AcesLive&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=officiallazyy&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
    
   </body>
 </html>
