--- a/index.html
+++ b/index.html
@@ -21,32 +21,6 @@
     scrolling="false"
     allowfullscreen="false">
 </iframe>
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=bonkstv&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=buddyd&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=ChrisRadial&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
 
  <iframe class="stream" 
     src="https://player.twitch.tv/?channel=Enulled&muted=false"
@@ -94,25 +68,7 @@
 </iframe>
    
 <iframe class="stream" 
-    src="https://player.twitch.tv/?channel=riddlelive&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=RealPolarBear&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=simplyridic&muted=false"
+    src="https://player.twitch.tv/?channel=itsbadboyblu&muted=false"
     height="144"
     width="256"
     frameborder="0"
