--- a/index.html
+++ b/index.html
@@ -176,5 +176,14 @@
     allowfullscreen="false">
 </iframe>
    
+   <iframe class="stream" 
+    src="https://player.twitch.tv/?channel=officialriz&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
   </body>
 </html>
