--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html>
  <header>
+ 
+
  	<title>Born's Lurk</title>
+    <script type="text/javascript" src="loading.js"></script>  
  	<link rel="stylesheet" type="text/css" href="stylesheet.css">
  	<h1 class="made">Made By <a class="link" href="https://twitter.com/Limedice">Lime</a></h1>
  	<h1 class="born">All Born Twitch Channels</h1>
  	<h1 class="born1">Please Lurk!</h1>
  	<h5 class ="fair">All channels are listed in alphabetical order to keep everything fair! 😊</h5>
+   
  </header>
 
   <body>
 
+<div class="box">
+    <a class="button" href="#popup1">How to use</a>
+</div>
 
+<div id="popup1" class="overlay">
+    <div class="popup">
+        <h2>How to use:</h2>
+        <a class="close" href="#">×</a>
+        <div class="content">
+            Right click this tab and select mute site!
+           <video loop autoplay class="video">
+         <source src="video.mp4" type="video/mp4">
+         <source src="video.ogg" type="video/ogg">
+        Your browser does not support the video tag.
+        </video>         
+        </div>
+    </div>
+</div>
 
 <iframe class="bornstream" 
     src="https://player.twitch.tv/?channel=bornesports&muted=false"
     height="216"
     width="384"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-
- <iframe class="stream" 
-    src="https://player.twitch.tv/?channel=Enulled&muted=false"
-    height="144"
-    width="256"
     frameborder="0"
     scrolling="false"
     allowfullscreen="false">
@@ -74,36 +86,8 @@
     frameborder="0"
     scrolling="false"
     allowfullscreen="false">
-</iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=Frequentzy&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=stxmpr&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=tbecurve&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
+</iframe>   
+
 <iframe class="stream" 
     src="https://player.twitch.tv/?channel=grayylive&muted=false"
     height="144"
@@ -121,45 +105,9 @@
     scrolling="false"
     allowfullscreen="false">
 </iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=ceyare&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
  
 <iframe class="stream" 
     src="https://player.twitch.tv/?channel=divineprodigyy&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=itszonicz&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=lceTV&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=AcesLive&muted=false"
     height="144"
     width="256"
     frameborder="0"
@@ -185,5 +133,131 @@
     allowfullscreen="false">
 </iframe>
    
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=callmehxdarkside&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+   
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=semmbros&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=feedslive&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=oskrrr_tv&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=Respawn_GG&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=pravid_tv&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=hypohutch&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=born_deluxe&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=awesome1025&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=liskys&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=pulsetv&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=thetoassty&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=twitchobliv&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream" 
+    src="https://player.twitch.tv/?channel=cedcap&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
   </body>
 </html>
