--- a/index.html
+++ b/index.html
@@ -8,45 +8,26 @@
  	<link rel="stylesheet" type="text/css" href="stylesheet.css">
  	<h1 class="made">Made By <a class="link" href="https://twitter.com/Limedice">Lime</a></h1>
  	<h1 class="born">All Born Twitch Channels</h1>
- 	<h1 class="born1">Please Lurk!</h1>
- 	<h5 class ="fair">All channels are listed in alphabetical order to keep everything fair! 😊</h5>
    
  </header>
 
   <body>
 
-<div class="box">
-    <a class="button" href="#popup1">How to use</a>
-</div>
 
-<div id="popup1" class="overlay">
-    <div class="popup">
-        <h2>How to use:</h2>
-        <a class="close" href="#">×</a>
-        <div class="content">
-            Right click this tab and select mute site!
+        <h2 class="how2">How to use:</h2>
+
            <video loop autoplay class="video">
          <source src="video.mp4" type="video/mp4">
          <source src="video.ogg" type="video/ogg">
         Your browser does not support the video tag.
         </video>         
         </div>
-    </div>
-</div>
+
 
 <iframe class="bornstream" 
     src="https://player.twitch.tv/?channel=bornesports&muted=false"
     height="216"
     width="384"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-
-<iframe class="stream" 
-    src="https://player.twitch.tv/?channel=hofff&muted=false"
-    height="144"
-    width="256"
     frameborder="0"
     scrolling="false"
     allowfullscreen="false">
