--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
  <header>
  
 
+
  	<title>Born's Lurk</title>
-    <script type="text/javascript" src="loading.js"></script>  
+    <link rel="shortcut icon" type="x-icon" href="/favicon.ico?">  
  	<link rel="stylesheet" type="text/css" href="stylesheet.css">
  	<h1 class="made">Made By <a class="link" href="https://twitter.com/Limedice">Lime</a></h1>
  	<h1 class="born">All Born Twitch Channels</h1>
