--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
  	<title>Born's Lurk</title>
     <link rel="shortcut icon" type="x-icon" href="/favicon.ico?">  
- 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+ 	<link rel="stylesheet" type="text/css" href="animate.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
  	<h1 class="made">Made By <a class="link" href="https://twitter.com/Limedice">Lime</a></h1>
  	<h1 class="born">All Born Twitch Channels</h1>
    
@@ -14,18 +15,13 @@
 
   <body>
 
-
+    <h1 class="sure animated tada">MAKE SURE THE STREAMS ARE UNMUTED</h1>
         <h2 class="how2">How to use:</h2>
 
-           <video loop autoplay class="video">
-         <source src="video.mp4" type="video/mp4">
-         <source src="video.ogg" type="video/ogg">
-        Your browser does not support the video tag.
-        </video>         
-        </div>
+        <img src="video.gif" class="video animated pulse">
+        <img src="video2.gif" class="video animated pulse">
 
-
-<iframe class="bornstream" 
+<iframe class="bornstream animated bounce" 
     src="https://player.twitch.tv/?channel=bornesports&muted=false"
     height="216"
     width="384"
@@ -34,7 +30,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=Limedices&muted=false"
     height="144"
     width="256"
@@ -43,7 +39,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=bornrandom17&muted=false"
     height="144"
     width="256"
@@ -52,7 +48,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=mynameissavior&muted=false"
     height="144"
     width="256"
@@ -61,7 +57,7 @@
     allowfullscreen="false">
 </iframe>
    
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=itsbadboyblu&muted=false"
     height="144"
     width="256"
@@ -70,7 +66,7 @@
     allowfullscreen="false">
 </iframe>   
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=grayylive&muted=false"
     height="144"
     width="256"
@@ -79,7 +75,7 @@
     allowfullscreen="false">
 </iframe>
   
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=zpoisonedyouth&muted=false"
     height="144"
     width="256"
@@ -88,7 +84,7 @@
     allowfullscreen="false">
 </iframe>
  
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=divineprodigyy&muted=false"
     height="144"
     width="256"
@@ -97,7 +93,7 @@
     allowfullscreen="false">
 </iframe>
    
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=officiallazyy&muted=false"
     height="144"
     width="256"
@@ -106,7 +102,7 @@
     allowfullscreen="false">
 </iframe>
    
-   <iframe class="stream" 
+   <iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=officialriz&muted=false"
     height="144"
     width="256"
@@ -115,7 +111,7 @@
     allowfullscreen="false">
 </iframe>
    
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=callmehxdarkside&muted=false"
     height="144"
     width="256"
@@ -124,7 +120,7 @@
     allowfullscreen="false">
 </iframe>
    
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=semmbros&muted=false"
     height="144"
     width="256"
@@ -133,7 +129,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=feedslive&muted=false"
     height="144"
     width="256"
@@ -142,7 +138,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=oskrrr_tv&muted=false"
     height="144"
     width="256"
@@ -151,7 +147,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=Respawn_GG&muted=false"
     height="144"
     width="256"
@@ -160,7 +156,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=pravid_tv&muted=false"
     height="144"
     width="256"
@@ -169,7 +165,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=hypohutch&muted=false"
     height="144"
     width="256"
@@ -178,7 +174,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=born_deluxe&muted=false"
     height="144"
     width="256"
@@ -187,7 +183,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=awesome1025&muted=false"
     height="144"
     width="256"
@@ -196,7 +192,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=liskys&muted=false"
     height="144"
     width="256"
@@ -205,7 +201,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=pulsetv&muted=false"
     height="144"
     width="256"
@@ -214,7 +210,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=thetoassty&muted=false"
     height="144"
     width="256"
@@ -223,7 +219,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=twitchobliv&muted=false"
     height="144"
     width="256"
@@ -232,7 +228,7 @@
     allowfullscreen="false">
 </iframe>
 
-<iframe class="stream" 
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=cedcap&muted=false"
     height="144"
     width="256"
@@ -240,6 +236,5 @@
     scrolling="false"
     allowfullscreen="false">
 </iframe>
-
   </body>
 </html>
