--- a/index.html
+++ b/index.html
@@ -82,17 +82,8 @@
     frameborder="0"
     scrolling="false"
     allowfullscreen="false">
-</iframe>
- 
-<iframe class="stream animated fadeInRightBig" 
-    src="https://player.twitch.tv/?channel=divineprodigyy&muted=false"
-    height="144"
-    width="256"
-    frameborder="0"
-    scrolling="false"
-    allowfullscreen="false">
-</iframe>
-   
+</iframe> 
+  
 <iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=officiallazyy&muted=false"
     height="144"
@@ -193,6 +184,15 @@
 </iframe>
 
 <iframe class="stream animated fadeInRightBig" 
+    src="https://player.twitch.tv/?channel=dragonatrr&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+<iframe class="stream animated fadeInRightBig" 
     src="https://player.twitch.tv/?channel=liskys&muted=false"
     height="144"
     width="256"
@@ -236,5 +236,16 @@
     scrolling="false"
     allowfullscreen="false">
 </iframe>
+
+<iframe class="stream animated fadeInRightBig" 
+    src="https://player.twitch.tv/?channel=mufasas&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+
+
   </body>
 </html>
