--- a/index.html
+++ b/index.html
@@ -246,6 +246,15 @@
     allowfullscreen="false">
 </iframe>
 
+<iframe class="stream animated fadeInRightBig" 
+    src="https://player.twitch.tv/?channel=DBntly&muted=false"
+    height="144"
+    width="256"
+    frameborder="0"
+    scrolling="false"
+    allowfullscreen="false">
+</iframe>
+  
 
   </body>
 </html>
